--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ MANIFEST
 
 
 ## IDEs ##
+# VSCODE
+.vscode
+visualstudio.code-workspace
 
 # IntelliJ: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
